Add graphhopper integration; Add cost-matrix implementation (#3)
* Add graphhopper integration; Add cost-matrix implementation

* Remove service

* Minor changes